\name{NEWS}
\title{NEWS file for the mosaic package}
\section{Changes in version 0.9.2}{
\itemize{
\item Added \code{swap} which is useful for creating randomization
distributions for paired designs.  The current implementation is a bit slow.  
We'll improve that by implementing part of the code in C++.
\item Some additional functions are now formula-aware: \code{MAD}, \code{SAD}, and \code{quantile}.
\item \code{docFile} introduced to simplify accessing files included
with package documentation.  \code{read.file()} enhanced to take a package
as an argument and look among package documentation files.
\item \code{factorize} introduced as a way to convert vectors with
few unique values into factors.  Can be applied to an entire data frame.
}
}
\section{Changes in version 0.9.1}{
\itemize{
\item The data sets formerly in this pacakge have been separated out into two
additional packages:  \pkg{NHANES} contains the \code{NHANES} data set
and \pkg{mosaicData} contains the other data sets.  
\item \code{MAD} and \code{SAD} were added to compute mean and sum
of all pairs of absolute differences.
\item Facilities for making choropleth maps has been added.  The API for these 
tools is still under development and may change in future releases.
\item \code{rspin} has been added to simulate spinning a spinner.
\item Two additional vignettes are included.  Less Volume, More Creativity
outlines how to use the \pkg{mosaic} package to simplify R for beginners.  
The other vignette 
illustrates many of the plotting features added by the \pkg{mosaic} package.
\item The mosaic package now contains two RMarkdown templates (one fancy and one plain).
\item \code{plotFun} has been improved so that it does a better job of selecting points
where the function is evaluated and no longer warns about \code{NaN}s encountered
while exploring the domain of the function.
\item \code{oddsRatio} has been redesigned and \code{relrisk} has been added.